# Polyfund

./: .gitignore  AGENTS.md  README.md  ai_client.py  anchor_selection.py  app.py  arbitrage_scanner.py  belief_selection.py  correlation.py  db.py  debug_correlation.py  debug_output.txt  debug_output_btc.txt  etl_markets.py  llm_keywords.py  llm_proxy.py  main.py  market_data.py  mock_ai.py  poly_quant_fund.py  portfolio_output.py  pyproject.toml  requirements.txt  search_pipeline.py
Frontend/: README.md
Frontend/src/app/components/: TrendingCard.tsx
Frontend/src/services/: polymarket.ts
backend/: ai_client.py  api_server.py  belief_selection.py  correlation.py  db.py  etl_markets.py  main.py  market_data.py  portfolio_output.py  search_pipeline.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/app/: App.tsx
frontend/src/app/components/: PortfolioCharts.tsx  ScenarioSimulator.tsx  TrendingCard.tsx
frontend/src/app/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  aspect-ratio.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  carousel.tsx  checkbox.tsx  collapsible.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  popover.tsx  progress.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  slider.tsx  sonner.tsx  switch.tsx  (+5 more)
frontend/src/services/: polymarket.ts
tests/: debug_relevance.py  test_engine.py  verify_fallback.py
